tdf#116482: Fix for Crash on drawing

Making the drawing layer import to use fastParser.

Change-Id: I4ff05d65de525aef3e50676072a79c9c329e6afc